--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -7,7 +7,8 @@
   color: $mainColor;
   top: 0;
   position: fixed;
-  z-index: 2;
+  z-index: 3;
+  transition: all 1s ease;
 
   .wrapper {
     padding: 10px 30px;
@@ -53,6 +54,29 @@
           width: 100%;
           height: 3px;
           background-color: $mainColor;
+          transform-origin: left;
+          transition: all 2s ease;
+        }
+      }
+    }
+  }
+
+  &.active-menu {
+    background-color: $mainColor;
+    color: white;
+
+    .hamburger {
+      span {
+        &:first-child {
+          background-color: white;
+          transform: rotate(45deg);
+        }
+        &:nth-child(2) {
+          opacity: 0;
+        }
+        &:last-child {
+          background-color: white;
+          transform: rotate(-45deg);
         }
       }
     }
