--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -1,3 +1,77 @@
 #intro {
-  background-color: #546a7b;
+  // background-color: #546a7b;
+  background-color: white;
+  display: flex;
+  .left {
+    flex: 0.5;
+    overflow: hidden;
+
+    .intro-img-container {
+      width: 700px;
+      height: 700px;
+      display: flex;
+      justify-content: flex-end;
+      align-items: flex-end; //center in video
+      background-color: teal;
+      border-radius: 50%;
+      float: right;
+
+      .intro-img {
+        height: 90%;
+      }
+    }
+  }
+
+  .right {
+    flex: 0.5;
+    // background-color: yellow;
+
+    .intro-text-container {
+      width: 100%;
+      height: 100%;
+      padding-left: 50px;
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      h1 {
+        font-size: 50px;
+        margin: 10px 0;
+      }
+      h2 {
+        font-size: 35px;
+      }
+      h3 {
+        font-size: 30px;
+        span {
+          color: teal;
+        }
+      }
+    }
+    a {
+      position: absolute;
+      bottom: 10px;
+      left: 60%;
+
+      .arrow-down {
+        width: 60px;
+        height: auto;
+        color: black;
+        opacity: 50%;
+        animation: arrowBlink 2s infinite;
+      }
+
+      @keyframes arrowBlink {
+        // 0% {
+        //   opacity: 10%;
+        // }
+        100% {
+          opacity: 0;
+        }
+        // 50% {
+        //   opacity: 20%;
+        // }
+      }
+    }
+  }
 }
