--- a/src/components/testimonials/testimonials.scss
+++ b/src/components/testimonials/testimonials.scss
@@ -1,3 +1,71 @@
 #testimonials {
-  background-color: #e4c3ad;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  h1 {
+    font-size: 50px;
+  }
+  .container {
+    width: 100%;
+    height: 80%;
+    // background-color: aqua;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+
+    .card {
+      width: 250px;
+      height: 70%;
+      border-radius: 10px;
+      // margin: 0 30px;
+      box-shadow: 0px 0px 15px -8px black;
+      padding: 20px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+
+      .top {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        img {
+          &.left,
+          &.right {
+            height: 25px;
+          }
+          &.userImage {
+            height: 60px;
+            width: 60px;
+            border-radius: 50%;
+            object-fit: cover;
+            margin: 0 30px;
+          }
+        }
+      }
+      .center {
+        background-color: rgb(231, 243, 243);
+        padding: 10px;
+        border-radius: 10px;
+      }
+
+      .bottom {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+        h3 {
+          margin-bottom: 5px;
+        }
+
+        h4 {
+          color: gray;
+        }
+      }
+    }
+  }
 }
