--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -1,3 +1,66 @@
 #contact {
-  background-color: #0d1f2d;
+  background-color: white;
+  display: flex;
+  // align-items: center;
+
+  .section-left {
+    flex: 1;
+    overflow: hidden;
+    img {
+      height: 100%;
+    }
+  }
+  .section-right {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    h2 {
+      font-size: 30px;
+    }
+
+    .form {
+      height: 70%;
+      width: 70%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-around;
+      input {
+        width: 300px;
+        height: 30px;
+        font-size: 14px;
+      }
+      textarea {
+        width: 300px;
+        height: 200px;
+        font-size: 14px;
+      }
+      button {
+        width: 150px;
+        height: 30px;
+        color: white;
+        background-color: teal;
+        border: 0;
+        border-radius: 10px;
+        font-weight: 500;
+        cursor: pointer;
+        transition: all 0.3s ease;
+        &:focus {
+          outline: none;
+        }
+
+        &:hover {
+          color: black;
+          background-color: white;
+          border: 1.5px solid teal;
+        }
+      }
+      span {
+        color: green;
+      }
+    }
+  }
 }
