--- a/src/app.scss
+++ b/src/app.scss
@@ -8,10 +8,17 @@
     top: 70px;
     scroll-snap-type: y mandatory;
 
+    //Extra
+    scroll-behavior: smooth;
+    scroll-snap-type: y mandatory;
+    scrollbar-width: none; //for firefox
+    &::-webkit-scrollbar {
+      display: none;
+    }
     > * {
       width: 100vw;
       height: calc(100vh - 70px);
-      scroll-snap-align: start;
+      // scroll-snap-align: start;
     }
   }
 }
