--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -1,8 +1,13 @@
+@import '../../global.scss';
+
 #contact {
   background-color: white;
   display: flex;
   // align-items: center;
 
+  @include mobile {
+    flex-direction: column;
+  }
   .section-left {
     flex: 1;
     overflow: hidden;
@@ -19,6 +24,9 @@
 
     h2 {
       font-size: 30px;
+      @include mobile {
+        margin-bottom: 5px;
+      }
     }
 
     .form {
@@ -32,11 +40,19 @@
         width: 300px;
         height: 30px;
         font-size: 14px;
+        @include mobile {
+          width: 200px;
+          height: 20px;
+        }
       }
       textarea {
         width: 300px;
         height: 200px;
         font-size: 14px;
+        @include mobile {
+          width: 200px;
+          height: 80px;
+        }
       }
       button {
         width: 150px;
