--- a/src/components/testimonials/testimonials.scss
+++ b/src/components/testimonials/testimonials.scss
@@ -1,11 +1,21 @@
+@import '../../global.scss';
+
 #testimonials {
   background-color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
 
+  @include mobile {
+    justify-content: space-around;
+  }
+
   h1 {
     font-size: 50px;
+
+    @include mobile {
+      font-size: 30px;
+    }
   }
   .container {
     width: 100%;
@@ -16,6 +26,11 @@
     align-items: center;
     justify-content: center;
 
+    @include mobile {
+      flex-direction: column;
+      height: 100%;
+      // margin: 10px 0;
+    }
     .card {
       width: 250px;
       height: 70%;
@@ -28,10 +43,21 @@
       justify-content: space-around;
       transition: all 1s ease;
 
+      @include mobile {
+        height: 25%;
+        padding: 15px; //
+        margin: 10px 0;
+      }
       &:nth-child(2) {
         width: 300px;
         height: 75%;
         margin: 0 30px;
+
+        @include mobile {
+          width: 250px;
+          height: 25%;
+          margin-bottom: 10px 0;
+        }
       }
       &:hover {
         transform: scale(1.1);
@@ -45,6 +71,10 @@
           &.left,
           &.right {
             height: 25px;
+            @include mobile {
+              height: 20px;
+              width: 20px;
+            }
           }
           &.userImage {
             height: 60px;
@@ -52,6 +82,11 @@
             border-radius: 50%;
             object-fit: cover;
             margin: 0 30px;
+
+            @include mobile {
+              height: 30px;
+              width: 30px;
+            }
           }
         }
       }
@@ -59,6 +94,11 @@
         background-color: rgb(231, 243, 243);
         padding: 10px;
         border-radius: 10px;
+
+        @include mobile {
+          font-size: 12px;
+          padding: 6px;
+        }
       }
 
       .bottom {
@@ -69,10 +109,17 @@
 
         h3 {
           margin-bottom: 5px;
+          @include mobile {
+            font-size: 14px;
+            margin-bottom: 1px;
+          }
         }
 
         h4 {
           color: gray;
+          @include mobile {
+            font-size: 13px;
+          }
         }
       }
     }
