--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -25,12 +25,17 @@
         text-decoration: none;
         color: inherit;
 
-        margin-right: 15px;
+        margin-right: 15px; //40px
       }
       .itemContainer {
+        //email and contact number
         display: flex;
         align-items: center;
         margin-left: 30px;
+
+        @include mobile {
+          display: none;
+        }
 
         .icon {
           font-size: 18px;
@@ -38,7 +43,7 @@
         }
         span {
           font-size: 15px;
-          font-weight: 400;
+          font-weight: 500;
         }
       }
     }
